install dask[dataframe]

--- a/ci/requirements/environment.yml
+++ b/ci/requirements/environment.yml
@@ -7,7 +7,7 @@ channels:
 dependencies:
     - pandas
     - dask
-    - dask-dataframe
+    - dask[dataframe]
     - matplotlib
     - xarray
     - bottleneck
