--- a/ci/requirements/environment.yml
+++ b/ci/requirements/environment.yml
@@ -7,13 +7,13 @@ channels:
 dependencies:
     - pandas
     - dask
-    - dask[dataframe]
     - matplotlib
     - xarray
     - bottleneck
     - netcdf4
     - h5netcdf
     - datashader
+    - pyarrow
     # for testing
     - pytest
     - pytest-cov
