--- a/ci/requirements/environment.yml
+++ b/ci/requirements/environment.yml
@@ -13,6 +13,8 @@ dependencies:
     - netcdf4
     - h5netcdf
     - datashader
+    # https://github.com/openforcefield/openff-nagl/issues/106
+    - snappy<1.2
     # for testing
     - pytest
     - pytest-cov
