adding pyarrow and snappy<1.2

--- a/ci/requirements/docs.yml
+++ b/ci/requirements/docs.yml
@@ -14,7 +14,9 @@ dependencies:
     - dask
     - netcdf4
     - h5netcdf
-
+    - pyarrow
+    # https://github.com/openforcefield/openff-nagl/issues/106
+    - snappy<1.2
     #documentation
     - ipython
     - nbsphinx
