add FOSSA GitHub workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,19 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  build:
+    name: License Scanning
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - name: Checkout tree
+        uses: actions/checkout@v4
+
+      - name: Run FOSSA scan and upload build data
+        uses: fossa-contrib/fossa-action@v3
+        with:
+          fossa-api-key: abcdefghijklmnopqrstuvwxyz
+
   test:
     name: py${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
