--- a/.github/workflows/fair-software.yaml
+++ b/.github/workflows/fair-software.yaml
@@ -10,7 +10,7 @@ jobs:
     name: "fair-software"
     runs-on: ubuntu-latest
     steps:
-      - uses: fair-software/howfairis-github-action@0.2.1
+      - uses: fair-software/howfairis-github-action@4c11146488125aa6e1531184eed51d781bcd5871 # v0.2.1
         name: Measure compliance with fair-software.eu recommendations
         env:
           PYCHARM_HOSTED: "Trick colorama into displaying colored output"
