--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip@ef78c129b1a966dbbbdb8ebfffc43723e89110d1 # v24.0
+          python -m pip install --upgrade pip
           python -m pip install build twine
 
       - name: Build tarball and wheels
