--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -1,120 +1,42 @@
-name: Build and Upload cdm_reader_mapper to PyPI
+name: Publish Python 🐍 distributions 📦 to PyPI
+
 on:
   release:
     types:
       - published
-  push:
-    tags:
-      - 'v*'
-  workflow_dispatch:
 
 permissions:
   contents: read
 
 jobs:
-  build-artifacts:
+  build-n-publish-pypi:
+    name: Build and publish Python 🐍 distributions 📦 to PyPI
+    environment: production
+    permissions:
+      # IMPORTANT: this permission is mandatory for trusted publishing
+      id-token: write
     runs-on: ubuntu-latest
-    if: github.repository == 'glamod/cdm_reader_mapper'
     steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@17d0e2bd7d51742c71671bd19fa12bdc9d40a3d6 # v2.8.1
+        with:
+          disable-sudo: true
+          egress-policy: block
+          allowed-endpoints: >
+            files.pythonhosted.org:443
+            github.com:443
+            pypi.org:443
+            upload.pypi.org:443
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - name: Set up Python3
+        uses: actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d # v5.1.0
         with:
-          fetch-depth: 0
-      - uses: actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d # v5.1.0
-        name: Install Python
-        with:
-          python-version: "3.12"
-
-      - name: Install dependencies
+          python-version: "3.x"
+      - name: Install packaging libraries
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install build twine
-
-      - name: Build tarball and wheels
+          python -m pip install flit==3.9.0
+      - name: Build a binary wheel and a source tarball
         run: |
-          git clean -xdf
-          git restore -SW .
-          python -m build
-
-      - name: Check built artifacts
-        run: |
-          python -m twine check --strict dist/*
-          pwd
-          if [ -f dist/cdm_reader_mapper-0.0.0.tar.gz ]; then
-            echo "❌ INVALID VERSION NUMBER"
-            exit 1
-          else
-            echo "✅ Looks good"
-          fi
-      - uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4.3.3
-        with:
-          name: releases
-          path: dist
-
-  test-built-dist:
-    needs: build-artifacts
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d # v5.1.0
-        name: Install Python
-        with:
-          python-version: "3.12"
-      - uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e # v4.1.7
-        with:
-          name: releases
-          path: dist
-      - name: List contents of built dist
-        run: |
-          ls -ltrh
-          ls -ltrh dist
-
-      - name: Verify the built dist/wheel is valid
-        if: github.event_name == 'push'
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install dist/cdm_reader_mapper*.whl
-          python -c "import cdm_reader_mapper; print(cdm_reader_mapper.__version__)"
-
-  upload-to-test-pypi:
-    needs: test-built-dist
-    if: github.event_name == 'push'
-    runs-on: ubuntu-latest
-
-    environment:
-      name: pypi
-      url: https://test.pypi.org/p/cdm_reader_mapper
-    permissions:
-      id-token: write
-
-    steps:
-      - uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e # v4.1.7
-        with:
-          name: releases
-          path: dist
-      - name: Publish package to TestPyPI
-        if: github.event_name == 'push'
+          python -m flit build
+      - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@ec4db0b4ddc65acdf4bff5fa45ac92d78b56bdf0 # v1.9.0
-        with:
-          repository-url: https://test.pypi.org/legacy/
-          verbose: true
-
-
-  upload-to-pypi:
-    needs: test-built-dist
-    if: github.event_name == 'release'
-    runs-on: ubuntu-latest
-
-    environment:
-      name: pypi
-      url: https://pypi.org/p/cdm_reader_mapper
-    permissions:
-      id-token: write
-
-    steps:
-      - uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e # v4.1.7
-        with:
-          name: releases
-          path: dist
-      - name: Publish package to PyPI
-        uses: pypa/gh-action-pypi-publish@ec4db0b4ddc65acdf4bff5fa45ac92d78b56bdf0 # v1.9.0
-        with:
-          verbose: true
