--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -4,6 +4,8 @@
 # To use this workflow, you will need to set up a .github/labeler.yml
 # file with configuration.  For more information, see:
 # https://github.com/actions/labeler/blob/master/README.md
+#
+# Copied from https://github.com/Ouranosinc/xclim
 
 name: Labeler
 on:
