--- a/.github/workflows/label-on-approval.yml
+++ b/.github/workflows/label-on-approval.yml
@@ -69,7 +69,9 @@ jobs:
         with:
           issue-number: ${{ github.event.pull_request.number }}
           comment-author: 'github-actions[bot]'
-          body-includes: This Pull Request is coming from a fork and must be manually tagged `approved` in order to perform additional testing.
+          body-includes: |
+            > This Pull Request is coming from a fork and must be manually tagged `approved`
+            > in order to perform additional testing.
       - name: Create comment
         if: |
           (steps.fc.outputs.comment-id == '') &&
@@ -81,7 +83,8 @@ jobs:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
             > **Warning**
-            > This Pull Request is coming from a fork and must be manually tagged `approved` in order to perform additional testing.
+            > This Pull Request is coming from a fork and must be manually tagged `approved`
+            > in order to perform additional testing.
           edit-mode: replace
       - name: Update comment
         if: |
