--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,7 @@ repos:
     rev: v0.23.1
     hooks:
       - id: toml-sort-fix
+        exclude: '.pylintrc.toml'
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.33.0
     hooks:
@@ -41,20 +42,31 @@ repos:
     rev: v0.1.11
     hooks:
       - id: ruff
+  - repo: https://github.com/pylint-dev/pylint
+    rev: v3.2.2
+    hooks:
+      - id: pylint
+        args: [ '--rcfile=.pylintrc.toml', '--errors-only', '--jobs=0', '--disable=import-error' ]
   - repo: https://github.com/pycqa/flake8
     rev: 7.0.0
     hooks:
       - id: flake8
         additional_dependencies: [ 'flake8-alphabetize', 'flake8-rst-docstrings ']
         args: [ '--config=.flake8' ]
+  - repo: https://github.com/jendrikseipp/vulture
+    rev: 'v2.11'
+    hooks:
+      - id: vulture        
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.7.1
     hooks:
       - id: nbqa-pyupgrade
         args: [ '--py38-plus' ]
+        additional_dependencies: [ 'pyupgrade==3.15.2' ]
       - id: nbqa-black
         additional_dependencies: [ 'black==23.12.1' ]
       - id: nbqa-isort
+        additional_dependencies: [ 'isort==5.13.2' ]
   - repo: https://github.com/kynan/nbstripout
     rev: 0.6.1
     hooks:
@@ -66,6 +78,11 @@ repos:
     hooks:
       - id: blackdoc
         additional_dependencies: [ 'black==23.12.1' ]
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.3.0
+    hooks:
+      - id: codespell
+        additional_dependencies: [ 'tomli' ]        
   - repo: https://github.com/gitleaks/gitleaks
     rev: v8.18.1
     hooks:
