--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,50 @@ skip = "cdm_reader_mapper/mdf_reader/code_tables/*/ICOADS.*.json"
 relative_files = true
 omit = ["tests/*.py"]
 
+[tool.deptry]
+extend_exclude = ["docs"]
+ignore_notebooks = true
+pep621_dev_dependency_groups = ["all", "dev", "docs"]
+
+[tool.deptry.package_module_name_map]
+"scikit-learn" = "sklearn"
+"pyyaml" = "yaml"
+
+[tool.deptry.per_rule_ignores]
+DEP001 = ["SBCK"]
+DEP002 = ["bottleneck", "pyarrow"]
+DEP004 = ["matplotlib", "pytest_socket"]
+
+[tool.flit.sdist]
+include = [
+  "AUTHORS.rst",
+  "CHANGES.rst",
+  "CONTRIBUTING.rst",
+  "LICENSE",
+  "Makefile",
+  "README.rst",
+  "ci/requirements/requirements.txt",
+  "docs/**/*.png",
+  "docs/**/*.rst",
+  "docs/**/*.txt",
+  "docs/Makefile",
+  "docs/conf.py",
+  "docs/make.bat",
+  "tests/**/*.py",
+  "cdm_reader_mapper/**/*.json",
+  "cdm_reader_mapper/**/*.py",
+  "cdm_reader_mapper/**/*.txt",
+  "cdm_reader_mapper/**/*.yml"
+]
+exclude = [
+  "**/*.py[co]",
+  "**/__pycache__",
+  ".*",
+  "docs/_*",
+  "docs/modules.rst",
+  "pylintrc"
+]
+
 [tool.isort]
 profile = "black"
 py_version = 39
@@ -64,80 +108,109 @@ add_imports = "from __future__ import annotations"
 python_version = 3.9
 show_error_codes = true
 warn_return_any = true
-warn_unused_ignores = true
+warn_unused_configs = true
+plugins = ["numpy.typing.mypy_plugin"]
 
 [[tool.mypy.overrides]]
 module = [
-  "pandas",
-  "matplotlib",
-  "pytest"
+  "boltons.*",
+  "cftime.*",
+  "jsonpickle.*",
+  "numba.*",
+  "pytest_socket.*",
+  "SBCK.*",
+  "scipy.*",
+  "sklearn.*",
+  "statsmodels.*",
+  "yamale.*",
+  "yaml.*"
 ]
 ignore_missing_imports = true
 
-[tool.nbqa.md]
-mdformat = true
-
-[tool.pytest]
-python_files = "test_*.py"
-testpaths = ["./tests"]
-
-[tool.rstcheck]
-report_level = "WARNING"
-ignore_roles = [
-  "pull",
-  "issue"
+[tool.pytest.ini_options]
+addopts = [
+  "--verbose",
+  "--color=yes",
+  "--numprocesses=0",
+  "--maxprocesses=8",
+  "--dist=worksteal"
+]
+norecursedirs = ["docs/notebooks/*", "example_notebooks/*"]
+filterwarnings = ["ignore::UserWarning"]
+testpaths = "tests tests"
+usefixtures = "xdoctest_namespace"
+doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL", "NUMBER", "ELLIPSIS"]
+markers = [
+  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+  "requires_docs: mark tests that can only be run with documentation present (deselect with '-m \"not requires_docs\"')",
+  "requires_internet: mark tests that require internet access (deselect with '-m \"not requires_internet\"')"
 ]
 
 [tool.ruff]
-src = ["cdm_reader_mapper"]
+src = ["xclim"]
 line-length = 150
-target-version = "py38"
-builtins = ["ellipsis"]
+target-version = "py39"
 exclude = [
   ".git",
-  ".eggs",
-  "docs",
   "build",
-  "tests"
+  ".eggs"
 ]
-ignore = [
-  "D205",
-  "D400",
-  "D401"
+extend-include = [
+  "*.ipynb" # Include notebooks
 ]
-select = [
-  "C9",
-  "D",
-  "E",
-  "F",
-  "W"
-]
-
-[tool.ruff.flake8-bandit]
-check-typed-exception = true
 
 [tool.ruff.format]
 line-ending = "auto"
 
-[tool.ruff.isort]
-known-first-party = ["cdm_reader_mapper"]
+[tool.ruff.lint]
+extend-select = [
+  "RUF022" # unsorted-dunder-all
+]
+ignore = [
+  "D205", # blank-line-after-summary
+  "D400", # ends-in-period
+  "D401" # non-imperative-mood
+]
+preview = true
+select = [
+  "C90", # mccabe-complexity
+  "D", # docstrings
+  "E", # pycodestyle errors
+  "F", # pyflakes
+  "N802", # invalid-function-name
+  "S", # bandit
+  "W" # pycodestyle warnings
+]
+
+[tool.ruff.lint.flake8-bandit]
+check-typed-exception = true
+
+[tool.ruff.lint.flake8-import-conventions.aliases]
+"matplotlib.pyplot" = "plt"
+numpy = "np"
+pandas = "pd"
+scipy = "sp"
+xarray = "xr"
+
+[tool.ruff.lint.isort]
+known-first-party = ["xclim"]
 case-sensitive = true
 detect-same-package = false
-lines-after-imports = 1
+lines-after-imports = 2
 no-lines-before = ["future", "standard-library"]
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 max-complexity = 15
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "docs/*.py" = ["D100", "D101", "D102", "D103"]
-"tests/*.py" = ["D100", "D101", "D102", "D103"]
-"cdm_reader_mapper/**/__init__.py" = ["F401", "F403", "I001"]
+"tests/**/*test*.py" = ["D100", "D101", "D102", "D103", "N802", "S101"]
+"cdm_reader_mapper/**/__init__.py" = ["F401", "F403"]
 
-[tool.ruff.pycodestyle]
+[tool.ruff.lint.pycodestyle]
 max-doc-length = 180
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "numpy"
 
 [tool.setuptools]
