codespell: allow words for ipynb's

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ target-version = [
 ]
 
 [tool.codespell]
-ignore-words-list = "sentinal, vaid"
+ignore-words-list = "sentinal, vaid, SME, ASSI, TRU"
 skip = "cdm_reader_mapper/mdf_reader/codes/**/*.json, cdm_reader_mapper/mdf_reader/schemas/**/*.json, cdm_reader_mapper/cdm_mapper/codes/**/*.json, tests/results/*.csv"
 
 [tool.coverage.run]
