--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -35,7 +35,7 @@ jobs:
           python-version: "3.x"
       - name: Install packaging libraries
         run: |
-          python -m pip install flit==3.9.0
+          python -m pip install -r ci/requirements/requirements_ci.txt
       - name: Build a binary wheel and a source tarball
         run: |
           python -m flit build
