--- a/pyproject.toml
+++ b/pyproject.toml
@@ -139,6 +139,12 @@ exclude = [
   "pylintrc"
 ]
 
+[tool.isort]
+profile = "black"
+py_version = 310
+append_only = true
+add_imports = "from __future__ import annotations"
+
 [tool.mypy]
 python_version = 3.10
 show_error_codes = true
