--- a/ci/requirements/docs.yml
+++ b/ci/requirements/docs.yml
@@ -6,8 +6,8 @@ channels:
 
 dependencies:
     #cdm_reader_mapper
-    - python>=3.10
-    - pandas
+    - python>=3.19
+    - pandas>=2.1.0
     - matplotlib
     - datashader
     - xarray
