--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -2,9 +2,12 @@
 name: Publish Python 🐍 distributions 📦 to PyPI
 
 on:
-  release:
-    types:
-      - published
+  push:
+    branches:
+      - "main"
+  pull_request:
+    branches:
+      - "main"
 
 permissions:
   contents: read
@@ -40,4 +43,4 @@ jobs:
         run: |
           python -m flit build
       - name: Publish distribution 📦 to PyPI
-        uses: pypa/gh-action-pypi-publish@15c56dba361d8335944d31a2ecd17d700fc7bcbc # v1.12.2
+        uses: pypa/gh-action-pypi-publish@fb13cb306901256ace3dab689990e13a5550ffaa # v1.11.0
