--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,11 +5,17 @@ updates:
     schedule:
       interval: daily
       time: '12:00'
-    open-pull-requests-limit: 10
+    groups:
+      actions:
+        patterns:
+          - "*"
 
   - package-ecosystem: pip
     directory: /
     schedule:
       interval: daily
       time: '12:00'
-    open-pull-requests-limit: 10
+    groups:
+      actions:
+        patterns:
+          - "*"
