--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -15,6 +15,9 @@ on:
       - docs/**.rst
       - .github/**.yml
       - .pre-commit-config.yaml
+    pull_request:
+      branches:
+        - main
   schedule:
     - cron: '30 23 * * 5'
 
@@ -51,10 +54,10 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@1245696032ecf7d39f87d54daa406e22ddf769a8
+        uses: github/codeql-action/init@396bb3e45325a47dd9ef434068033c6d5bb0d11a  # v3.27.3
         with:
           languages: ${{ matrix.language }}
       - name: Autobuild
-        uses: github/codeql-action/autobuild@1245696032ecf7d39f87d54daa406e22ddf769a8
+        uses: github/codeql-action/autobuild@396bb3e45325a47dd9ef434068033c6d5bb0d11a  # v3.27.3
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@1245696032ecf7d39f87d54daa406e22ddf769a8
+        uses: github/codeql-action/analyze@396bb3e45325a47dd9ef434068033c6d5bb0d11a  # v3.27.3
