--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -2,9 +2,12 @@
 name: Publish Python 🐍 distributions 📦 to PyPI
 
 on:
-  release:
-    types:
-      - published
+  push:
+    branches:
+      - "*"
+  pull_request:
+    branches:
+      - "*"
 
 permissions:
   contents: read
@@ -27,7 +30,7 @@ jobs:
             files.pythonhosted.org:443
             github.com:443
             pypi.org:443
-            ghcr.io:443
+            ruf-repo-cdn.sigstore.dev:443
             upload.pypi.org:443
       - name: Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
