--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: cdm Testing Suite
+name: cdm_reader_mapper Testing Suite
 on:
   push:
     branches:
@@ -34,7 +34,7 @@ jobs:
           fetch-depth: 0 # Fetch all history for all branches and tags.
       - name: Set environment variables
         run: |
-          echo "CONDA_ENV_FILE=ci/requirements/environment.yml" >> $GITHUB_ENV
+          echo "CONDA_ENV_FILE=environment.yml" >> $GITHUB_ENV
           echo "PYTHON_VERSION=${{ matrix.python-version }}" >> $GITHUB_ENV
 
       - name: Create conda environment
@@ -42,7 +42,7 @@ jobs:
         with:
           cache-downloads: true
           cache-downloads-key: "${{runner.os}}-${{runner.arch}}-py${{matrix.python-version}}-${{hashFiles(env.CONDA_ENV_FILE)}}"
-          environment-file: ci/requirements/environment.yml
+          environment-file: environment.yml
           create-args: >-
             python=${{ matrix.python-version }}
 
@@ -55,7 +55,7 @@ jobs:
           conda info -a
           conda list
 
-      - name: Import cdm reader mapper toolbox
+      - name: Import cdm_reader_mapper toolbox
         run: |
           python -c "import cdm_reader_mapper"
 
