--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -37,7 +37,7 @@ jobs:
           python-version: "3.x"
       - name: Install packaging libraries
         run: |
-          python -m pip install -r ci/requirements/requirements_ci.txt
+          python -m pip install -r CI/requirements_ci.txt
       - name: Build a binary wheel and a source tarball
         run: |
           python -m flit build
