--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,23 +27,21 @@ classifiers = [
 ]
 dynamic = ["version"]
 dependencies = [
-  "matplotlib",
-  "pandas>=2.1.0",
-  "dask",
-  "distributed",
-  "datashader",
+  "bottleneck >=1.3.1",
+  "dask >=2024.8.1",
+  "datashader >=0.15.0",
+  "numba >=0.60.0",
+  "pandas>=2.2.0",
+  "pyarrow >=15.0.0",
+  "swifter >=1.3.2",
+  "timezonefinder >6.5.0",
+  "xarray >=2023.11.0,!=2024.10.0 ",
   "msgpack",
   "requests",
-  "xarray",
-  "netcdf4",
-  "h5netcdf",
-  "timezonefinder",
   "python-slugify",
   "textdistance",
-  "swifter",
-  "platformdirs",
-  "pyarrow",
-  "recordlinkage"
+  "platformdirs >4.0.0",
+  "recordlinkage >= 0.15"
 ]
 
 [project.urls]
@@ -108,7 +106,7 @@ pep621_dev_dependency_groups = ["all", "dev", "docs"]
 [tool.deptry.per_rule_ignores]
 DEP001 = ["SBCK"]
 DEP002 = ["bottleneck", "pyarrow"]
-DEP004 = ["matplotlib", "pytest_socket"]
+DEP004 = ["pytest_socket"]
 
 [tool.flit.sdist]
 include = [
@@ -118,7 +116,8 @@ include = [
   "LICENSE",
   "Makefile",
   "README.rst",
-  "ci/requirements/requirements.txt",
+  "CI/requirements_ci.txt",
+  "environment.yml",
   "docs/**/*.png",
   "docs/**/*.rst",
   "docs/**/*.txt",
@@ -213,7 +212,6 @@ select = [
 check-typed-exception = true
 
 [tool.ruff.lint.flake8-import-conventions.aliases]
-"matplotlib.pyplot" = "plt"
 numpy = "np"
 pandas = "pd"
 scipy = "sp"
