--- a/.github/workflows/create-environments.yml
+++ b/.github/workflows/create-environments.yml
@@ -17,7 +17,7 @@ permissions:
 
 jobs:
   create-conda:
-    name: py${{ matrix.python-version }}
+    name: conda-py${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     defaults:
       run:
@@ -52,7 +52,7 @@ jobs:
           python -c "import cdm_reader_mapper"
 
   create-pip:
-    name: py{{ matrix.python-versions }}
+    name: pip-py&{{ matrix.python-versions }}
     runs-on: ${{ matrix.os }}
     defaults:
       run:
