--- a/environment.yml
+++ b/environment.yml
@@ -20,7 +20,7 @@ dependencies:
     #development
     - black =24.10.0
     - blackdoc =0.3.9
-    - bump-my-version =0.28.0
+    - bump-my-version >=0.28.1
     - codespell=2.3.0
     - coverage >=7.5.0
     - coveralls >=4.0.1  # Note: coveralls is not yet compatible with Python 3.13
