--- a/CI/requirements_ci.txt
+++ b/CI/requirements_ci.txt
@@ -1,23 +1,17 @@
-bump-my-version==0.28.0
-deptry==0.20.0
-flit==3.9.0
-pip==24.2.0
-pylint==3.3.1
-tox==4.23.0
-tox-gh==1.4.4
-pandas>=2.1.0
-dask
-distributed
-datashader
+bottleneck>=1.3.1
+dask>=2024.8.1
+datashader>=0.15.0
+distributed>=2.0
+h5netcdf>=1.3.0
 msgpack
-requests
-xarray
 netcdf4
-h5netcdf
-timezonefinder
+numba>=0.60.0
+pandas>=2.2.0
+platformdirs>4.0.0
+pyarrow>=15.0.0
 python-slugify
-textdistance
-swifter
-platformdirs
-pyarrow
-recordlinkage
+recordlinkage>=0.15
+requests
+swifter>=1.3.2
+timezonefinder>6.5.0
+xarray>=2023.11.0,!=2024.10.0
