--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,8 @@ dependencies:
     - bottleneck >=1.3.1
     - dask >=2024.8.1
     - datashader >=0.15.0
+    - h5netcdf >=1.3.0
+    - netcdf4
     - numba >=0.60.0
     - pandas>=2.2.0
     - pyarrow >=15.0.0  # Strongly encouraged for Pandas v2.2.0+
