--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,46 @@ dependencies = [
   "xarray >=2023.11.0,!=2024.10.0"
 ]
 
+[project.optional-dependencies]
+dev = [
+  "black[jupyter] ==25.1.0",
+  "blackdoc ==0.3.9",
+  "bumpy-my-version >=0.28.1",
+  "codespell ==2.3.0",
+  "coverage >=7.5.0",
+  "coveralls >=4.0.1",
+  "deptry ==0.20.0",
+  "distributed >=2.0",
+  "flake8 >=7.1.1",
+  "flake8-rst-docstring >=0.3.0",
+  "flit >=3.9.0",
+  "isort ==5.13.2",
+  "nbconvert >=7.16.4",
+  "notebook",
+  "pip >=24.2.0",
+  "pre-commit >=3.7",
+  "pylint >=3.3.1",
+  "ruff >=0.7.0",
+  "vulture ==2.14"
+]
+docs = [
+  "ipykernel",
+  "ipython >=8.5.0",
+  "nbsphinx >=0.9.5",
+  "numpydoc >=1.8.0",
+  "sphinx >=7.0.0",
+  "sphinx-autodoc-typehints",
+  "sphinx-copybutton",
+  "sphinx-book-theme >=1.0"
+]
+tests = [
+  "pytest >=8.0.0",
+  "pytest.cov >=5.0.0",
+  "pytest-socket >=0.6.0",
+  "pytest-xdist >=3.2"
+]
+all = ["cdm_reader_mapper[dev]", "cdm_reader_mapper[docs]", "cdm_reader_mapper[tests]"]
+
 [project.urls]
 "Homepage" = "https://cdm-reader-mapper.readthedocs.io"
 "Source" = "https://github.com/glamod/cdm_reader_mapper"
