--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ dev = [
   "deptry ==0.20.0",
   "distributed >=2.0",
   "flake8 >=7.1.1",
-  "flake8-rst-docstring >=0.3.0",
+  "flake8-rst-docstrings >=0.3.0",
   "flit >=3.9.0",
   "isort ==5.13.2",
   "nbconvert >=7.16.4",
