--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ classifiers = [
 dynamic = ["version"]
 dependencies = [
   "bottleneck >=1.3.1",
-  "dask >=2024.8.1",
+  "dask[array] >=2024.8.1",
   "datashader >=0.15.0",
   "distributed >=2.0",
   "h5netcdf >= 1.3.0",
