--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,6 @@ dependencies = [
 dev = [
   "black[jupyter] ==25.1.0",
   "blackdoc ==0.3.9",
-  "bump-my-version >=0.28.1",
   "codespell ==2.3.0",
   "coverage >=7.5.0",
   "coveralls >=4.0.1",
@@ -69,7 +68,6 @@ dev = [
   "flake8-rst-docstrings >=0.3.0",
   "flit >=3.9.0",
   "isort ==5.13.2",
-  "nbconvert >=7.16.4",
   "notebook",
   "pip >=24.2.0",
   "pre-commit >=3.7",
@@ -80,7 +78,8 @@ dev = [
 docs = [
   "ipykernel",
   "ipython >=8.5.0",
-  "nbsphinx >=0.9.5",
+  "myst-nb >=1.2.0",
+  "nbconvert >=7.16.4",
   "numpydoc >=1.8.0",
   "sphinx >=7.0.0",
   "sphinx-autodoc-typehints",
