fix: 'tests' dependency group no longer exists, use 'dev' group

--- a/.github/workflows/testing-suite.yml
+++ b/.github/workflows/testing-suite.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Install cdm reader mapper toolbox
         run: |
-          uv sync --extra tests
+          uv sync --extra dev
 
       - name: Version info
         run: |
