--- a/CI/requirements_ci.txt
+++ b/CI/requirements_ci.txt
@@ -2,6 +2,8 @@ bottleneck>=1.3.1
 dask>=2024.8.1
 datashader>=0.15.0
 distributed>=2.0
+flit>=3.9
+flit-core>=3.9
 h5netcdf>=1.3.0
 msgpack
 netcdf4
