--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -2,9 +2,12 @@
 name: Publish Python 🐍 distributions 📦 to PyPI
 
 on:
-  release:
-    types:
-      - published
+  push:
+    branches:
+      - "*"
+  pull_request:
+    branches:
+      - "*"
 
 permissions:
   contents: read
