--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ dependencies = [
   "recordlinkage >= 0.15",
   "requests",
   "swifter >=1.3.2",
-  "timezonefinder >6.5.0",
+  "timezonefinder >6.5.0,<7.0.0",
   "xarray >=2023.11.0,!=2024.10.0"
 ]
 
