--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ cdm_reader_mapper/_version.py
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+uv.lock
 
 # Unit test / coverage reports
 htmlcov/
@@ -47,6 +48,8 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
+*.psv
+*.csv
 
 # Translations
 *.mo
@@ -65,6 +68,7 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+docs/generated
 
 # PyBuilder
 target/
