--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ authors = [
 maintainers = [
   {name = "Ludwig Lierhammer", email = "ludwig.lierhammer@dwd.de"},
   {name = "Joseph Siddons", email = "joseph.siddons@noc.ac.uk"},
-  {name = "Jan Marius Willruth", email = "jan.willruth@dwd.de"},
+  {name = "Jan Marius Willruth", email = "jan.willruth@dwd.de"}
 ]
 readme = {file = "README.rst", content-type = "text/x-rst"}
 requires-python = ">=3.10"
@@ -34,7 +34,8 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
-  "Programming Language :: Python :: 3.13"
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14"
 ]
 dynamic = ["version"]
 dependencies = [
