--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -79,6 +79,7 @@ repos:
     hooks:
       - id: codespell
         additional_dependencies: [ 'tomli' ]
+        exclude: tests/.*\.py
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.31.1
     hooks:
